--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   # Authentication
   local_auth: ^2.2.0
   sign_in_with_apple: ^5.0.0
+  google_sign_in: ^6.1.0
   
   # Firebase
   firebase_core: ^2.24.0
